# multiple_thread_validproxy

./: .clang-format  .clangd  .cproject  .gitignore  .project  AGENTS.md  CMakeLists.txt  README.md  STRATEGY.md  config.json  create_test_db.sql  kilo.json  kilo_bak.json  null  opencode-model-config.md  opencode_context7_remote.json  output.txt  run_test.bat  ses_2992ef9e3ffeLeZWuxrPFCCkib.json  session-ses_1d66.json  ss_compare.txt  start_xray.bat  task_plan.md  test_curl_output.txt  test_dedup_output.txt  test_model_output.txt  test_outbound.json  test_output.txt  test_vless.cpp  xray_outbound.json
Testing/: run_tests.ps1  run_tests_v2.ps1
docs/: 1776914861549-gentle-panda.md  2026-06-02-ReleaseNotes-subscription-panel-sorting-v1.0.4.md  2026-06-02-ReleaseNotes-validproxy-ui-subscription-delete-v1.0.4.md  DEV-PROCESS.md  INDEX.md  Unified-document-naming-conventions.md  architecture.md  available-skills-reference.md  build-env-2026-05-19-171906+0800.md  context.md  glossary.md  model-config.md  opencode-zen-free-models.md  project-knowledge.md  prompt-patterns.md  日志重构需求.md
docs/bugfix/: 2026-05-20-ctrl-c-exit.md  2026-05-20-proxy-list-add-configtype-move-indexid.md  2026-05-20-proxy-list-host-sort.md  2026-05-20-proxy-list-indexid-search-log.md  2026-05-20-proxylist-sub-selection-sort.md  2026-05-20-single-proxy-detail-panel.md  2026-05-20-sort-scroll-fields.md  2026-05-20-wxformat-assert.md  2026-05-21-subscription-list-number-column.md  2026-05-22-chatgpt-suggest.md  2026-05-22-clear-button-black-background-fix.md  2026-05-22-grok-suggest.md  2026-05-22-lsp-clangd-config-fix.md  2026-05-22-toolbar-resize-remnants-overlap-fix.md  2026-05-26-close-cancel-batch-test-find.md  2026-05-27-tool-update1-icon-missing.md  2026-05-28-cancel-sub-update-proxyfinder-phase.md  2026-05-28-sql-error-console-output-fix.md  2026-05-29-proxylist-two-bugs.md  2026-06-01-batch-test-cmd-window-flicker.md  2026-06-01-cli-ctrl-c-interrupt-fix.md  2026-06-02-portmanager-port-leak-fix.md  2026-06-02-proxylist-column-sort-missing.md  2026-06-02-subscription-enable-toggle-fix.md  2026-06-03-appcontroller-xray-configdir-fix.md  2026-06-03-config-dialog-improvements.md  2026-06-03-subscription-update-timeout-and-updatetime-fix.md  2026-06-04-subitemupdater-hardcoded-binconfig-path.md  2026-06-09-configreader-load-error-popup-fix.md  bugfix-20260520-ctrl-c-exit.md  bugfix-20260520-proxy-list-indexid-search-log.md  bugfix-20260520-proxy-list-sort-subscription-search.md  bugfix-20260520-single-proxy-detail-panel.md  bugfix-20260520-sort-scroll-fields.md  bugfix-20260520-wxformat-assert.md
docs/code-reviews/: 2026-05-07-logger-configreader-fixes-review.md  2026-05-19-testpanel-log-display-review.md
docs/design/: cli-default-test-all-design.md  cli-gui-binary-split-design.md  dedup-blacklist-design.md  invalid-proxy-filter-map.md  ui-design-plan.md
docs/ideation/: 2026-05-07-improvement-ideas-ideation.md
docs/plans/: 2026-04-13-module-refactoring-plan.md  2026-04-17-subscription-url-proxy-fallback-plan.md  2026-04-23-001-fix-sql-delay-filter.md  2026-04-24-proxy-sync.md  2026-05-07-001-refactor-curl-raii-wrapper-plan.md  2026-05-07-002-refactor-dedup-optimization-plan.md  2026-05-08-001-fix-sync-logger-plan.md  2026-05-08-002-fix-cli-argument-handling-plan.md  2026-05-08-003-standardize-proxy-test-error-levels-plan.md  2026-05-08-004-cleanup-dead-config-fields-plan.md  2026-05-08-005-restore-sub-update-interval-check-plan.md  2026-05-09-006-fix-sub-update-interval-not-skipping-plan.md  2026-05-09-007-add-report-loglevel-for-summary-output-plan.md  2026-05-09-008-fix-skip-not-working-in-proxy-first-mode-plan.md  2026-05-09-009-fix-notification-config-and-add-missing-notifications-plan.md  2026-05-09-010-fix-log-file-nul-header-bug-plan.md  2026-05-09-011-fix-write-after-close-log-bug-plan.md  2026-05-09-012-fix-log-level-mismatches-from-audit-plan.md  2026-05-09-013-fix-sync-sql-placeholder-and-logging-plan.md  2026-05-10-merge-log-level-standardization-plan.md  2026-05-11-001-agents-md-improvement-plan.md  2026-05-11-002-save-project-memory.md  2026-05-11-003-fix-sync-config-path-errors-plan.md  2026-05-11-004-subitem-updater-v2-optimization-plan.md  2026-05-11-005-config-transaction-batch-plan.md  2026-05-11-006-sharelinkparser-plan.md  2026-05-12-007-log-config-sql-queries-plan.md  2026-05-12-009-remove-dead-log-level-field-plan.md  2026-05-13-001-adjust-sub-update-log-level-to-report-plan.md  2026-05-13-002-adjust-profile-progress-inserted-log-level-to-report-plan.md  2026-05-13-P0-fix-silent-sqlite3-exec-and-finalize-plan.md  2026-05-13-P1-extract-sqlite3-open-helper-and-exec-template-plan.md  (+40 more)
grok_app/: ProfileSerializer.cpp  ProfileSerializer.h  ShareLinkParser.h  profileitem.h
include/: AllModels.h  ConfigGenerator.h  ConfigReader.h  CurlEasyHandle.h  DatabaseHelper.h  Dnsitem.h  Fullconfigtemplateitem.h  Logger.h  PortManager.h  Profileexitem.h  Profilegroupitem.h  Profileitem.h  ProxyBatchTester.h  ProxyFinder.h  ProxyTester.h  Routingitem.h  Serverstatitem.h  ShareLink.h  Subitem.h  SubitemUpdater.h  SubitemUpdaterV2.h  UrlFetcher.h  Utils.h  XrayApi.h  XrayInstance.h  XrayManager.h  sqlite1_to_cpp.py  sqlite_sample_to_cpp.py  sqlite_to_cpp.py
memory/: project_knowledge.md
scripts/: test_mcp.json
src/: ConfigGenerator.cpp  ConfigReader.cpp  Logger.cpp  PortManager.cpp  ProxyBatchTester.cpp  ProxyFinder.cpp  ProxyFinder_part1.cpp  ProxyFinder_temp.cpp  ProxyTester.cpp  ShareLink.cpp  SubitemUpdater.cpp  SubitemUpdaterV2.cpp  SubitemUpdaterV2.cpp.bak2  SubitemUpdaterV2_bind.txt  SubitemUpdaterV2_bind_temp.txt  UrlFetcher.cpp  Utils.cpp  XrayApi.cpp  XrayInstance.cpp  XrayManager.cpp  main.cpp  main.cpp.backup  main_cli.cpp  main_gui.cpp
test/: import_test.txt  init_test_db.cpp  test_import.txt
tests/: test_config_generator.cpp  test_config_reader.cpp  test_config_reader_load.cpp  test_curl_easy_handle.cpp  test_dedup.cpp  test_delete_subscription.cpp  test_logger.cpp  test_model.cpp  test_sharelink.cpp  test_utils.cpp  test_utils.h  test_wx_menu.cpp  test_wx_minimal.cpp
(+114 files in other folders)
